<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Symptom Checker</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_sync">Sync</string>
    <string name="title_activity_check_in">Check In</string>
    <string name="action_check_in">Check In</string>
    <string name="action_check_ins">Check Ins</string>
    <string name="title_activity_time_settings">Check In Times (minimum 4)</string>
    <string name="action_ok">OK</string>
    <string name="action_add">Add</string>
    <string name="action_save">Save</string>
    <string name="app_welcome">Welcome to Symptom Checker!</string>
    <string name="action_new_login">New login</string>
    <string name="action_connect_to_server">Connect to Server</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="draw_gesture">Draw an Infinity below to continue</string>
    <string name="app_login">Login</string>
    <string name="title_activity_doctor_patient_list">Doctor Patient List</string>
    <string name="title_server">Server address:port</string>
    <string name="title_pain">How bad is your mouth pain / sore throat?</string>
    <string name="title_pain_moderate">Moderate</string>
    <string name="title_pain_severe">Severe</string>
    <string name="title_pain_well_controlled">Well Controlled</string>
    <string name="title_eating_affect">Does your pain stop you eating/drinking?</string>
    <string name="title_eating_affect_none">None</string>
    <string name="title_eating_affect_some">Some</string>
    <string name="title_eating_affect_cant_eat">Can\'t eat</string>
    <string name="title_medication_question">Did you take your medication?</string>
    <string name="title_medication_question_short">Took it?</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_delete">Delete</string>
    <string name="search_title">Search</string>
    <string name="title_medications">Medications</string>
    <string name="action_reminder_time_settings">Check In Reminder Times</string>
    <string name="action_doctor_settings">Doctor Settings</string>
    <string name="title_activity_patient_graph">Patient Status</string>
    <string name="title_activity_doctor_checkin_list">Patient Checkins</string>
    <string name="title_activity_patient_medication_list">Patient Medications</string>
    <string name="title_activity_doctor_settings">Doctor Settings</string>
    <string name="title_activity_doctor_details">Doctor Details</string>
    <string name="title_activity_patient_settings">Patient Settings</string>
    <string name="title_activity_patient_details">Patient Details</string>
    <string name="title_server_connect_interval">Interval between server connections (mins)</string>
    <string name="title_activity_details">Details Activity</string>

</resources>
