<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="au.com.anerlich.symptomchecker.StartActivity" >

 
         <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/app_welcome"
        android:textAppearance="?android:attr/textAppearanceMedium" />

         <TextView
        android:id="@+id/txServer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        	android:layout_below="@+id/textView1"
        android:layout_marginTop="24dp"
        android:layout_centerInParent="true"
        android:text="@string/title_server" />
         
         <EditText
             android:id="@+id/etServer"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        	android:layout_below="@+id/txServer"
                     android:layout_marginTop="6dp"
        android:ems="10"
        android:inputType="text" >
 
		</EditText>
         
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etServer"
        android:layout_centerInParent="true"
        android:layout_marginTop="24dp"
        android:text="@string/user_name" />

    <EditText
        android:id="@+id/etUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_centerInParent="true"
        android:layout_marginTop="6dp"
        android:ems="10"
        android:inputType="text" >

        <requestFocus />
    </EditText>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etUserName"
            android:layout_centerInParent="true"
        	android:layout_marginTop="24dp"
            android:text="@string/password" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView3"
        android:layout_centerInParent="true"
        android:layout_marginTop="6dp"
        android:ems="10"
        android:inputType="text|textPassword" >

    </EditText>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etPassword"
        android:layout_centerInParent="true"
        android:layout_marginTop="6dp"
        android:text="@string/app_login" />
    
        <TextView
            android:id="@+id/tvDrawGesture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
        android:layout_centerInParent="true"
            android:layout_below="@+id/btnLogin"
        android:layout_marginTop="12dp"
            android:text="@string/draw_gesture" />

    <android.gesture.GestureOverlayView
        android:id="@+id/gestureOverlayView1"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:layout_below="@+id/tvDrawGesture"
        android:layout_marginTop="5dp"
        android:background="#ff00ffff"
        android:gestureColor="#ffffff00" >

    </android.gesture.GestureOverlayView>


</RelativeLayout>